zig-pkg/zig-0.0.0-Fp4XJG_h5A3OLpPXqVTJ1DRl3lZhqHp_fClrI7MUVjU_/test/cases/compile_errors/runtime_index_into_comptime_only_many_ptr.zig
var rt: usize = 0;
export fn foo() void {
    const x: [*]const type = &.{ u8, u16 };
    _ = x[rt];
}

// error
//
// :4:11: error: values of type 'type' must be comptime-known, but index value is runtime-known
// :4:10: note: types are not available at runtime
